--- a/UmdlaloVirtualGaming/packages.config
+++ b/UmdlaloVirtualGaming/packages.config
@@ -4,7 +4,12 @@
   <package id="AspNet.ScriptManager.bootstrap" version="3.4.1" targetFramework="net48" />
   <package id="AspNet.ScriptManager.jQuery" version="3.4.1" targetFramework="net48" />
   <package id="bootstrap" version="3.4.1" targetFramework="net48" />
+  <package id="BouncyCastle" version="1.8.5" targetFramework="net48" />
+  <package id="Google.Protobuf" version="3.14.0" targetFramework="net48" />
   <package id="jQuery" version="3.4.1" targetFramework="net48" />
+  <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net48" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net48" />
+  <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net48" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net48" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net48" />
   <package id="Microsoft.AspNet.ScriptManager.MSAjax" version="5.0.0" targetFramework="net48" />
@@ -14,6 +19,12 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
+  <package id="MySql.Data" version="8.0.23" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
+  <package id="SSH.NET" version="2020.0.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
