--- a/UmdlaloVirtualGaming/UmdlaloVirtualGaming.csproj
+++ b/UmdlaloVirtualGaming/UmdlaloVirtualGaming.csproj
@@ -212,6 +212,7 @@
     <Content Include="Pages\assets\plugins\global\fonts\summernote\summernote.ttf" />
     <Content Include="Pages\assets\plugins\global\fonts\summernote\summernote.woff" />
     <Content Include="Pages\assets\plugins\global\fonts\summernote\summernote.woff2" />
+    <Content Include="Lecturer.Master" />
     <None Include="Properties\PublishProfiles\Default Settings.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Pages\assets\css\pages\error\error-3.css" />
@@ -2254,7 +2255,10 @@
     <Content Include="Pages\auth\HelloWorld.aspx" />
     <Content Include="Pages\auth\index.aspx" />
     <Content Include="Pages\auth\WebForm2.aspx" />
+    <Content Include="Pages\lecturer\lecturer-dashboard.aspx" />
+    <Content Include="Pages\student\student-course-list.aspx" />
     <Content Include="Pages\student\student-dashboard.aspx" />
+    <Content Include="Pages\student\student-profile-edit.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
@@ -2323,6 +2327,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Lecturer.Master.cs">
+      <DependentUpon>Lecturer.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Lecturer.Master.designer.cs">
+      <DependentUpon>Lecturer.Master</DependentUpon>
+    </Compile>
     <Compile Include="Pages\auth\HelloWorld.aspx.cs">
       <DependentUpon>HelloWorld.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -2344,12 +2355,33 @@
     <Compile Include="Pages\auth\WebForm2.aspx.designer.cs">
       <DependentUpon>WebForm2.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Pages\lecturer\lecturer-dashboard.aspx.cs">
+      <DependentUpon>lecturer-dashboard.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\lecturer\lecturer-dashboard.aspx.designer.cs">
+      <DependentUpon>lecturer-dashboard.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\student\student-course-list.aspx.cs">
+      <DependentUpon>student-course-list.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\student\student-course-list.aspx.designer.cs">
+      <DependentUpon>student-course-list.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Pages\student\student-dashboard.aspx.cs">
       <DependentUpon>student-dashboard.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Pages\student\student-dashboard.aspx.designer.cs">
       <DependentUpon>student-dashboard.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\student\student-profile-edit.aspx.cs">
+      <DependentUpon>student-profile-edit.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\student\student-profile-edit.aspx.designer.cs">
+      <DependentUpon>student-profile-edit.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
@@ -2373,6 +2405,13 @@
     <Compile Include="Student.Master.designer.cs">
       <DependentUpon>Student.Master</DependentUpon>
     </Compile>
+    <Compile Include="Tutor.Master.cs">
+      <DependentUpon>Tutor.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Tutor.Master.designer.cs">
+      <DependentUpon>Tutor.Master</DependentUpon>
+    </Compile>
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -2384,7 +2423,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Pages\admin\" />
-    <Folder Include="Pages\lecturer\" />
     <Folder Include="Pages\main\" />
     <Folder Include="Pages\tutor\" />
     <Folder Include="Utility\" />
@@ -2394,6 +2432,7 @@
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
     <Content Include="Student.Master" />
+    <Content Include="Tutor.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
