--- a/UmdlaloVirtualGaming/UmdlaloVirtualGaming.csproj
+++ b/UmdlaloVirtualGaming/UmdlaloVirtualGaming.csproj
@@ -2256,9 +2256,14 @@
     <Content Include="Pages\auth\index.aspx" />
     <Content Include="Pages\auth\WebForm2.aspx" />
     <Content Include="Pages\lecturer\lecturer-dashboard.aspx" />
+    <Content Include="Pages\student\student-calendar-view.aspx" />
     <Content Include="Pages\student\student-course-list.aspx" />
     <Content Include="Pages\student\student-dashboard.aspx" />
+    <Content Include="Pages\student\student-marks-view.aspx" />
     <Content Include="Pages\student\student-profile-edit.aspx" />
+    <Content Include="Pages\student\student-project-list.aspx" />
+    <Content Include="Pages\student\student-projects-view.aspx" />
+    <Content Include="Pages\student\student-task-view.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
@@ -2362,6 +2367,13 @@
     <Compile Include="Pages\lecturer\lecturer-dashboard.aspx.designer.cs">
       <DependentUpon>lecturer-dashboard.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Pages\student\student-calendar-view.aspx.cs">
+      <DependentUpon>student-calendar-view.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\student\student-calendar-view.aspx.designer.cs">
+      <DependentUpon>student-calendar-view.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Pages\student\student-course-list.aspx.cs">
       <DependentUpon>student-course-list.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -2376,12 +2388,40 @@
     <Compile Include="Pages\student\student-dashboard.aspx.designer.cs">
       <DependentUpon>student-dashboard.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Pages\student\student-marks-view.aspx.cs">
+      <DependentUpon>student-marks-view.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\student\student-marks-view.aspx.designer.cs">
+      <DependentUpon>student-marks-view.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Pages\student\student-profile-edit.aspx.cs">
       <DependentUpon>student-profile-edit.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Pages\student\student-profile-edit.aspx.designer.cs">
       <DependentUpon>student-profile-edit.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\student\student-project-list.aspx.cs">
+      <DependentUpon>student-project-list.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\student\student-project-list.aspx.designer.cs">
+      <DependentUpon>student-project-list.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\student\student-projects-view.aspx.cs">
+      <DependentUpon>student-projects-view.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\student\student-projects-view.aspx.designer.cs">
+      <DependentUpon>student-projects-view.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\student\student-task-view.aspx.cs">
+      <DependentUpon>student-task-view.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\student\student-task-view.aspx.designer.cs">
+      <DependentUpon>student-task-view.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
