fixed email function

--- a/UmdlaloVirtualGaming/Web.config
+++ b/UmdlaloVirtualGaming/Web.config
@@ -27,7 +27,19 @@
       </files>
     </defaultDocument>
   </system.webServer>
- 
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="Network" from="umdlalovgc@gmail.com">
+        <network
+          host="smtp.gmail.com"
+          port="587"
+          enableSsl="true"
+          userName="umdlalovgc@gmail.com"
+          password="848go&amp;BZmWc8"
+          defaultCredentials="true"/>
+      </smtp>
+    </mailSettings>
+  </system.net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
