--- a/UmdlaloVirtualGaming/Web.config
+++ b/UmdlaloVirtualGaming/Web.config
@@ -35,7 +35,7 @@
           port="587"
           enableSsl="true"
           userName="umdlalovgc@gmail.com"
-          password="848go&amp;BZmWc8"
+          password="D$7g8@3aAOAM"
           defaultCredentials="true"/>
       </smtp>
     </mailSettings>
